// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileWidget renders a file widget component with value 1`] = `
<div>
  <div
    class="inline field field-wrapper-my-field"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-field"
              id="fieldset-default-field-label-my-field"
            >
              My field
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="file-widget-dropzone"
            tabindex="0"
          >
            <img
              class="ui small image image-preview"
              id="field-my-field-image"
              src="http://myfile?id=0"
            />
            <label
              class="label-file-widget-input"
            >
              Replace existing file
            </label>
            <input
              autocomplete="off"
              id="field-my-field"
              multiple=""
              name="my-field"
              style="display: none;"
              tabindex="-1"
              type="file"
            />
          </div>
          <div
            class="field-file-name"
          >
            myfile
            <button
              aria-label="delete file"
              class="ui basic icon button delete-button"
            >
              <svg
                class="icon"
                style="height: 20px; width: auto; fill: currentColor;"
                viewBox=""
                xmlns=""
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileWidget renders a file widget component with value in raw data 1`] = `
<div>
  <div
    class="inline field field-wrapper-my-field"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-field"
              id="fieldset-default-field-label-my-field"
            >
              My field
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="file-widget-dropzone"
            tabindex="0"
          >
            <img
              class="ui small image image-preview"
              id="field-my-field-image"
              src="data:image/png;base64,oiweurtksdgfjaslfqw9523563456"
            />
            <label
              class="label-file-widget-input"
            >
              Replace existing file
            </label>
            <input
              autocomplete="off"
              id="field-my-field"
              multiple=""
              name="my-field"
              style="display: none;"
              tabindex="-1"
              type="file"
            />
          </div>
          <div
            class="field-file-name"
          >
            myfile
            <button
              aria-label="delete file"
              class="ui basic icon button delete-button"
            >
              <svg
                class="icon"
                style="height: 20px; width: auto; fill: currentColor;"
                viewBox=""
                xmlns=""
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileWidget renders an empty file widget component 1`] = `
<div>
  <div
    class="inline field field-wrapper-my-field"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-field"
              id="fieldset-default-field-label-my-field"
            >
              My field
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="file-widget-dropzone"
            tabindex="0"
          >
            <div
              class="dropzone-placeholder"
            >
              <p
                class="dropzone-text"
              >
                Drop file here to upload a new file
              </p>
            </div>
            <label
              class="label-file-widget-input"
            >
              Choose a file
            </label>
            <input
              autocomplete="off"
              id="field-my-field"
              multiple=""
              name="my-field"
              style="display: none;"
              tabindex="-1"
              type="file"
            />
          </div>
          <div
            class="field-file-name"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
